tests/security/taintThroughChildConstructorWhenMethodOverriddenWithParentConstructorCall/output.txt
ERROR: TaintedData - input.hack:20:6 - Data from a URL query string found its way to an HTML tag